<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.example.androidweatherml.WeatherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/city_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/city_country"
            android:textSize="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/date"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/colorWhite"/>

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/clouds"
            android:layout_marginTop="@dimen/_24sdp"/>

        <com.github.pavlospt.CircleView
            android:id="@+id/weather_result"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:cv_titleSubtitleSpace="40"
            app:cv_fillColor="@color/colorBackground"
            app:cv_strokeColorValue="@color/colorWhite"
            app:cv_backgroundColorValue="@color/colorWhite"
            app:cv_titleColor="@color/colorWhite"
            app:cv_titleSize="@dimen/_50sdp"
            app:cv_titleText="@string/temperature"
            app:cv_subtitleSize="@dimen/_14sdp"
            app:cv_subtitleText="@string/weather_information"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@color/colorSubLayout"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="@dimen/_16sdp"
                android:background="@drawable/customborder">

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textColor="@color/colorSubTitle"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/wind_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="start"
                    android:text="@string/wind_speed"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_text"
                    android:textColor="@color/colorSubTitle"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="start"
                    android:text="@string/pressure"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_16sdp"
                android:background="@drawable/customborder">

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/humidity"
                    android:textColor="@color/colorSubTitle"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/humidity_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="left"
                    android:text="@string/humidity_rate"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />

            </RelativeLayout>



        </LinearLayout>

        <TextView
            android:id="@+id/last_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/last_updated_text"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

</LinearLayout>