<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidweatherml.WeatherActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/change_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_city"
            android:textSize="25sp"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_city"
            android:layout_marginTop="20dp"
            android:background="@drawable/customborder"
            android:textColor="#000"
            android:hint="@string/enter_city"
            android:lines="1"/>

        <CheckBox
            android:id="@+id/default_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/action_ok"
            android:layout_below="@id/input"
            android:checked="false" />

        <TextView
            android:id="@+id/default_checkbox_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input"
            android:layout_above="@id/action_ok"
            android:layout_toRightOf="@id/default_checkbox"
            android:gravity="center"
            android:text="@string/default_checkbox_text"
            android:textSize="15sp"
            android:textColor="@color/colorAbout" />

        <TextView
            android:id="@+id/action_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>



</RelativeLayout>